[tool.poetry]
name = "creating-blockchain"
version = "0.1.0"
description = ""
authors = ["ormarek <16357457+ormarek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blockchain = "creating_blockchain.main:main"
